oauth2-proxy/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`auth.int.mvaldes.dev`) && PathPrefix(`/oauth2`)
      services:
        - name: oauth2-proxy
          port: 80
